solution/day-3/step-1/kibana-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kibana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/secure-backends: 'true'
spec:
  tls:
    - hosts:
        - kibana.tonpseudo.takima.cloud
      secretName: kibana-tls
  rules:
    - host: kibana.tonpseudo.takima.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-tp-kb-http
                port:
                  number: 5601
